; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_backref.c_iterate_inodes_from_logical.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_backref.c_iterate_inodes_from_logical.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_fs_info = type { i32 }
%struct.btrfs_path = type { i32 }
%struct.btrfs_key = type { i64 }

@BTRFS_EXTENT_FLAG_TREE_BLOCK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iterate_inodes_from_logical(i64 %0, %struct.btrfs_fs_info* %1, %struct.btrfs_path* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.btrfs_fs_info*, align 8
  %9 = alloca %struct.btrfs_path*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca %struct.btrfs_key, align 8
  %15 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store %struct.btrfs_fs_info* %1, %struct.btrfs_fs_info** %8, align 8
  store %struct.btrfs_path* %2, %struct.btrfs_path** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  %16 = load %struct.btrfs_path*, %struct.btrfs_path** %9, align 8
  %17 = getelementptr inbounds %struct.btrfs_path, %struct.btrfs_path* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %15, align 4
  %19 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %8, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.btrfs_path*, %struct.btrfs_path** %9, align 8
  %22 = call i32 @extent_from_logical(%struct.btrfs_fs_info* %19, i64 %20, %struct.btrfs_path* %21, %struct.btrfs_key* %14)
  store i32 %22, i32* %12, align 4
  %23 = load %struct.btrfs_path*, %struct.btrfs_path** %9, align 8
  %24 = call i32 @btrfs_release_path(%struct.btrfs_path* %23)
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* @BTRFS_EXTENT_FLAG_TREE_BLOCK, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %5
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %12, align 4
  br label %32

32:                                               ; preds = %29, %5
  %33 = load i32, i32* %12, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %32
  %36 = load i32, i32* %12, align 4
  store i32 %36, i32* %6, align 4
  br label %51

37:                                               ; preds = %32
  %38 = load i64, i64* %7, align 8
  %39 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %14, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = sub nsw i64 %38, %40
  store i64 %41, i64* %13, align 8
  %42 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %8, align 8
  %43 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %14, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* %13, align 8
  %46 = load i32, i32* %15, align 4
  %47 = load i32*, i32** %10, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = call i32 @iterate_extent_inodes(%struct.btrfs_fs_info* %42, i64 %44, i64 %45, i32 %46, i32* %47, i8* %48)
  store i32 %49, i32* %12, align 4
  %50 = load i32, i32* %12, align 4
  store i32 %50, i32* %6, align 4
  br label %51

51:                                               ; preds = %37, %35
  %52 = load i32, i32* %6, align 4
  ret i32 %52
}

declare dso_local i32 @extent_from_logical(%struct.btrfs_fs_info*, i64, %struct.btrfs_path*, %struct.btrfs_key*) #1

declare dso_local i32 @btrfs_release_path(%struct.btrfs_path*) #1

declare dso_local i32 @iterate_extent_inodes(%struct.btrfs_fs_info*, i64, i64, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
